--- a/src/app/component/Header/Header.css
+++ b/src/app/component/Header/Header.css
@@ -1,37 +1,36 @@
-.header{
- display: flex;
- justify-content: space-evenly;
- border-bottom: .1px solid lightgray;
- padding-top: 10px;
- padding-bottom: 10px;
- width: 100vw;
- position:sticky;
- top: 0;
+.header {
+  display: flex;
+  justify-content: space-evenly;
+  border-bottom: 0.1px solid lightgray;
+  background-color: white;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 100vw;
+  position: sticky;
+  top: 0;
 }
-.header__left{
-display: flex;
+.header__left {
+  display: flex;
 }
-.header__search{
-  padding:10px;
+.header__search {
+  padding: 10px;
   height: 22px;
   display: flex;
   align-items: center;
-  margin-left:10px ;
-  border-radius:5px ;
-  color:gray;
+  margin-left: 10px;
+  border-radius: 5px;
+  color: gray;
   background-color: #eef3f8;
-  
-   
 }
-.header__search >input{
+.header__search > input {
   outline: none;
-  border:none;
-  background: none;  
+  border: none;
+  background: none;
 }
-.header__left > img{
-object-fit: contain;
-height: 40px;
+.header__left > img {
+  object-fit: contain;
+  height: 40px;
 }
-.header__right{
+.header__right {
   display: flex;
 }
